okd/web/web-route.yaml
objects:
- <<: (( merge ))
- apiVersion: v1
  kind: Route
  metadata:
    name: web
  spec:
    host: ${HOSTNAME}
    port:
      targetPort: http
    to:
      kind: Service
      name: web
